--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "firebase": "^8.2.7",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-firebase-hooks": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
