--- a/package.json
+++ b/package.json
@@ -7,12 +7,26 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.5",
+    "@chakra-ui/react": "^1.3.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@hookform/resolvers": "^1.3.4",
+    "@rehooks/component-size": "^1.0.3",
+    "d3": "^6.5.0",
+    "d3-hierarchy": "^2.0.0",
     "firebase": "^8.2.7",
+    "framer-motion": "^3.3.0",
+    "nanoid": "^3.1.20",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-firebase-hooks": "^2.2.0"
+    "react-firebase-hooks": "^2.2.0",
+    "react-hook-form": "^6.15.1",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
+    "@types/d3": "^6.3.0",
+    "@types/d3-hierarchy": "^2.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.1.0",
