--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "d3-hierarchy": "^2.0.0",
     "firebase": "^8.2.7",
     "framer-motion": "^3.3.0",
+    "nanoid": "^3.1.20",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-firebase-hooks": "^2.2.0",
     "react-hook-form": "^6.15.1",
+    "react-router-dom": "^5.2.0",
     "yup": "^0.32.8"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "@types/d3-hierarchy": "^2.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.1.0",
     "typescript": "^4.1.2",
     "vite": "^2.0.0-beta.69"
