--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@rehooks/component-size": "^1.0.3",
     "d3": "^6.5.0",
     "d3-hierarchy": "^2.0.0",
+    "easy-peasy": "^5.0.3",
     "firebase": "^8.2.7",
     "framer-motion": "^3.3.0",
     "nanoid": "^3.1.20",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-firebase-hooks": "^3.0.1",
     "react-hook-form": "^6.15.1",
     "react-router-dom": "^5.2.0",
     "yup": "^0.32.8"
