--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "easy-peasy": "^5.0.3",
     "firebase": "^8.2.7",
     "framer-motion": "^3.3.0",
+    "marked": "^2.0.1",
     "nanoid": "^3.1.20",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/d3": "^6.3.0",
     "@types/d3-hierarchy": "^2.0.0",
+    "@types/marked": "^2.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
