--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@rehooks/component-size": "^1.0.3",
     "d3": "^6.5.0",
     "d3-hierarchy": "^2.0.0",
+    "downshift": "^6.1.0",
     "easy-peasy": "^5.0.3",
     "firebase": "^8.2.7",
     "framer-motion": "^3.3.0",
+    "lodash.debounce": "^4.0.8",
     "marked": "^2.0.1",
     "nanoid": "^3.1.20",
     "react": "^17.0.0",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@types/d3": "^6.3.0",
     "@types/d3-hierarchy": "^2.0.0",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/marked": "^2.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
