--- a/functions/package.json
+++ b/functions/package.json
@@ -3,21 +3,26 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
+    "watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "set-config": "firebase functions:config:unset env && firebase functions:config:set env=\"$(cat .runtimeconfig.json)\"",
+    "get-config": "firebase functions:config:get > .runtimeconfig.json"
   },
   "engines": {
-    "node": "12"
+    "node": "14"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "node-mailjet": "^3.3.4"
   },
   "devDependencies": {
+    "@types/node-mailjet": "^3.3.7",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
