--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,15 +1,18 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "target": "esnext",
+    "outDir": "lib",
+    "baseUrl": ".",
+    "paths": {
+      "@shared/*": ["../shared/*"]
+    },
     "noImplicitReturns": true,
     "noUnusedLocals": true,
-    "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "skipLibCheck": true
   },
-  "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "include": ["./src", "../shared"],
+  "compileOnSave": true
 }
