--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^1.3.4",
     "d3": "^6.5.0",
     "d3-hierarchy": "^2.0.0",
+    "date-fns": "^2.25.0",
     "downshift": "^6.1.0",
     "easy-peasy": "^5.0.3",
     "easymde": "^2.15.0",
