Add path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
     "jsx": "react",
     "baseUrl": ".",
     "paths": {
-      "@shared/*": ["shared/*"]
+      "@shared/*": ["shared/*"],
+      "@api/*": ["src/api/*"],
+      "@components/*": ["src/components/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@store/*": ["src/store/*"]
     }
   },
   "include": ["./src", "./shared"]
