--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.1.0",
     "typescript": "^4.4.4",
-    "vite": "^2.0.5"
+    "vite": "^2.0.5",
+    "vite-tsconfig-paths": "^3.3.17"
   }
 }
