--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.uniqby": "^4.7.0",
     "marked": "^2.0.1",
+    "memoizee": "^0.4.15",
     "nanoid": "^3.1.20",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -39,12 +40,13 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.uniqby": "^4.7.6",
     "@types/marked": "^2.0.0",
+    "@types/memoizee": "^0.4.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.1.0",
     "typescript": "^4.4.4",
-    "vite": "^2.0.5",
+    "vite": "^2.7.0-beta.5",
     "vite-tsconfig-paths": "^3.3.17"
   }
 }
