--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
-    "@vitejs/plugin-react": "^1.1.0-beta.0",
+    "@vitejs/plugin-react": "^1.1.0",
     "typescript": "^4.4.4",
-    "vite": "^2.7.0-beta.8",
+    "vite": "^2.7.0-beta.9",
     "vite-tsconfig-paths": "^3.3.17"
   }
 }
