--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.5",
     "@chakra-ui/react": "^1.3.3",
+    "@dnd-kit/core": "^4.0.3",
+    "@dnd-kit/modifiers": "^4.0.0",
+    "@dnd-kit/sortable": "^5.1.0",
+    "@dnd-kit/utilities": "^3.0.2",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@fullcalendar/core": "^5.10.1",
