--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase": "^8.2.7",
     "framer-motion": "^3.3.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
     "marked": "^2.0.1",
     "nanoid": "^3.1.30",
@@ -48,6 +49,7 @@
     "@types/d3": "^6.3.0",
     "@types/d3-hierarchy": "^2.0.0",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.throttle": "^4.1.6",
     "@types/lodash.uniqby": "^4.7.6",
     "@types/marked": "^2.0.0",
     "@types/react": "^17.0.0",
