--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-simplemde-editor": "^5.0.1",
+    "slugify": "^1.6.5",
     "yup": "^0.32.8"
   },
   "devDependencies": {
