--- a/functions/package.json
+++ b/functions/package.json
@@ -17,11 +17,14 @@
   },
   "main": "lib/functions/src/index.js",
   "dependencies": {
+    "express": "^4.17.2",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
+    "ical-generator": "^3.1.1",
     "node-mailjet": "^3.3.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node-mailjet": "^3.3.7",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
