Change header style

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "easy-peasy": "^5.0.3",
     "easymde": "^2.15.0",
     "firebase": "^8.2.7",
+    "focus-visible": "^5.2.0",
     "framer-motion": "^3.3.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
