--- a/functions/package.json
+++ b/functions/package.json
@@ -21,18 +21,20 @@
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "ical-generator": "^3.1.1",
+    "module-alias": "^2.2.2",
     "node-mailjet": "^3.3.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/module-alias": "^2.0.1",
     "@types/node-mailjet": "^3.3.7",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
-    "typescript": "^3.8.0"
+    "typescript": "^4.4.4"
   },
   "private": true
 }
