--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -14,5 +14,9 @@
     "skipLibCheck": true
   },
   "include": ["./src", "../shared"],
-  "compileOnSave": true
+  "compileOnSave": true,
+  "baseUrl": ".",
+  "paths": {
+    "@shared/*": ["../shared/*"]
+  }
 }
