--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "firebase:emulator": "firebase emulators:start --import=./firebase-emulator-data --export-on-exit",
-    "firebase:emulator:export": "firebase emulators:export ./firebase-emulator-data"
+    "firebase:emulator:export": "firebase emulators:export ./firebase-emulator-data",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.5",
     "@chakra-ui/react": "^1.3.3",
-    "@dnd-kit/core": "^4.0.3",
-    "@dnd-kit/modifiers": "^4.0.0",
-    "@dnd-kit/sortable": "^5.1.0",
-    "@dnd-kit/utilities": "^3.0.2",
+    "@dnd-kit/core": "^5.0.1",
+    "@dnd-kit/modifiers": "^5.0.0",
+    "@dnd-kit/sortable": "^6.0.0",
+    "@dnd-kit/utilities": "^3.1.0",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@fullcalendar/core": "^5.10.1",
@@ -38,6 +39,7 @@
     "lodash.uniqby": "^4.7.0",
     "marked": "^2.0.1",
     "nanoid": "^3.1.30",
+    "patch-package": "^6.4.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.20.2",
