--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "focus-visible": "^5.2.0",
     "framer-motion": "^5",
     "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
     "marked": "^2.0.1",
@@ -53,6 +54,7 @@
     "@types/d3": "^6.3.0",
     "@types/d3-hierarchy": "^2.0.0",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.throttle": "^4.1.6",
     "@types/lodash.uniqby": "^4.7.6",
     "@types/marked": "^2.0.0",
