--- a/functions/package.json
+++ b/functions/package.json
@@ -8,9 +8,7 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log",
-    "set-config": "firebase functions:config:unset env && firebase functions:config:set env=\"$(cat .runtimeconfig.json)\"",
-    "get-config": "firebase functions:config:get > .runtimeconfig.json"
+    "logs": "firebase functions:log"
   },
   "engines": {
     "node": "14"
@@ -19,7 +17,7 @@
   "dependencies": {
     "express": "^4.17.2",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.16.0",
+    "firebase-functions": "^3.18.0",
     "ical-generator": "^3.1.1",
     "module-alias": "^2.2.2",
     "node-mailjet": "^3.3.4"
