--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "patch-package": "^6.4.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-easy-crop": "^4.0.2",
     "react-hook-form": "^7.20.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
