--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:format": "prettier --loglevel warn --write \"./src/**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "firebase:emulator": "firebase emulators:start --import=./firebase-emulator-data --export-on-exit",
     "firebase:emulator:export": "firebase emulators:export ./firebase-emulator-data",
+    "firestore:seed": "echo 'Firestore seeding running...' && echo $(curl -s -i -H \"Authorization: E1MTYyMzkwMjJ9\" http://localhost:5001/roles-app-37879/us-central1/api/seed)",
     "postinstall": "patch-package"
   },
   "dependencies": {
