--- a/package.json
+++ b/package.json
@@ -44,6 +44,12 @@
     "marked": "^2.0.1",
     "nanoid": "^3.1.30",
     "patch-package": "^6.4.7",
+    "prosemirror-collab": "^1.2.2",
+    "prosemirror-compress": "0.0.2",
+    "prosemirror-keymap": "^1.1.5",
+    "prosemirror-model": "^1.16.1",
+    "prosemirror-state": "^1.3.4",
+    "prosemirror-transform": "^1.3.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-easy-crop": "^4.0.2",
@@ -53,6 +59,9 @@
     "rich-markdown-editor": "^11.21.3",
     "slugify": "^1.6.5",
     "styled-components": "^5.3.3",
+    "y-prosemirror": "^1.0.15",
+    "y-webrtc": "^10.2.2",
+    "yjs": "^13.5.28",
     "yup": "^0.32.8"
   },
   "devDependencies": {
@@ -64,6 +73,11 @@
     "@types/lodash.throttle": "^4.1.6",
     "@types/lodash.uniqby": "^4.7.6",
     "@types/marked": "^2.0.0",
+    "@types/prosemirror-collab": "^1.1.2",
+    "@types/prosemirror-keymap": "^1.0.4",
+    "@types/prosemirror-model": "^1.16.1",
+    "@types/prosemirror-state": "^1.2.8",
+    "@types/prosemirror-transform": "^1.1.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
