--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fullcalendar/react": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
     "@hookform/resolvers": "^2.8.3",
+    "crypto-hash": "^2.0.1",
     "d3": "^6.5.0",
     "d3-hierarchy": "^2.0.0",
     "date-fns": "^2.25.0",
