--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fullcalendar/react": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
     "@hookform/resolvers": "^2.8.8",
+    "@rolebase/editor": "^11.21.13",
     "crypto-hash": "^2.0.1",
     "d3": "^7.3.0",
     "d3-hierarchy": "^3.1.1",
@@ -43,15 +44,8 @@
     "lodash.isequal": "^4.5.0",
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
-    "marked": "^2.0.1",
     "nanoid": "^3.3.1",
     "patch-package": "^6.4.7",
-    "prosemirror-collab": "^1.2.2",
-    "prosemirror-compress": "0.0.2",
-    "prosemirror-keymap": "^1.1.5",
-    "prosemirror-model": "^1.16.1",
-    "prosemirror-state": "^1.3.4",
-    "prosemirror-transform": "^1.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^4.1.3",
@@ -59,7 +53,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "slugify": "^1.6.5",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -70,12 +64,6 @@
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.throttle": "^4.1.6",
     "@types/lodash.uniqby": "^4.7.6",
-    "@types/marked": "^2.0.0",
-    "@types/prosemirror-collab": "^1.1.2",
-    "@types/prosemirror-keymap": "^1.0.4",
-    "@types/prosemirror-model": "^1.16.1",
-    "@types/prosemirror-state": "^1.2.8",
-    "@types/prosemirror-transform": "^1.1.5",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.1.7",
