--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@dnd-kit/utilities": "^3.1.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/montserrat": "^4.5.10",
+    "@fontsource/nunito": "^4.5.8",
     "@fullcalendar/core": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
