--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.6",
-    "@dnd-kit/core": "^5.0.3",
-    "@dnd-kit/modifiers": "^5.0.0",
-    "@dnd-kit/sortable": "^6.0.1",
-    "@dnd-kit/utilities": "^3.1.0",
+    "@dnd-kit/core": "^6.0.1",
+    "@dnd-kit/modifiers": "^6.0.0",
+    "@dnd-kit/sortable": "^7.0.0",
+    "@dnd-kit/utilities": "^3.2.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fontsource/montserrat": "^4.5.10",
@@ -50,6 +50,7 @@
     "nanoid": "^3.3.1",
     "patch-package": "^6.4.7",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^4.1.3",
     "react-hook-form": "^7.28.0",
@@ -68,6 +69,7 @@
     "@types/lodash.throttle": "^4.1.6",
     "@types/lodash.uniqby": "^4.7.6",
     "@types/react": "^17.0.40",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
