--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "framer-motion": "^6",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
+    "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
@@ -65,6 +66,7 @@
     "@types/d3": "^7.1.0",
     "@types/d3-hierarchy": "^3.0.2",
     "@types/diff": "^5.0.2",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.throttle": "^4.1.6",
     "@types/lodash.uniqby": "^4.7.6",
