--- a/package.json
+++ b/package.json
@@ -10,16 +10,11 @@
     "lint:format": "prettier --loglevel warn --write \"./src/**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "test": "vitest",
     "firebase:emulator": "firebase emulators:start --import=./firebase-emulator-data --export-on-exit",
-    "firebase:emulator:export": "firebase emulators:export ./firebase-emulator-data",
-    "postinstall": "patch-package"
+    "firebase:emulator:export": "firebase emulators:export ./firebase-emulator-data"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.6",
-    "@dnd-kit/core": "^6.0.1",
-    "@dnd-kit/modifiers": "^6.0.0",
-    "@dnd-kit/sortable": "^7.0.0",
-    "@dnd-kit/utilities": "^3.2.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fontsource/montserrat": "^4.5.10",
@@ -49,7 +44,6 @@
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
     "nanoid": "^3.3.1",
-    "patch-package": "^6.4.7",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
