--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-i18next": "^11.16.7",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.5",
     "slugify": "^1.6.5",
     "styled-components": "^5.3.5",
     "yup": "^0.32.11"
@@ -69,6 +70,7 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "@vitejs/plugin-react": "^1.2.0",
