--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "diff": "^5.0.0",
     "downshift": "^6.1.7",
     "easy-peasy": "^5.0.4",
-    "firebase": "^9.8.3",
+    "firebase": "^9.9.3",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6",
     "i18next": "^21.6.16",
@@ -73,15 +73,17 @@
     "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
-    "@vitejs/plugin-react": "^1.2.0",
+    "@vitejs/plugin-react": "^2.0.1",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "prettier": "^2.6.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.8.0",
     "typescript": "^4.6.2",
-    "vite": "^2.8.6",
-    "vite-tsconfig-paths": "^3.4.1",
-    "vitest": "^0.7.0"
+    "vite": "^3.0.9",
+    "vite-tsconfig-paths": "^3.5.0",
+    "vitest": "^0.22.1"
   }
 }
