--- a/functions/.env.template
+++ b/functions/.env.template
@@ -1,3 +1,6 @@
 MAILJET_PUBIC_KEY=
 MAILJET_PRIVATE_KEY=
 SECURITY_INVITATION_TOKEN=
+ALGOLIA_APP_ID=
+ALGOLIA_SEARCH_API_KEY=
+ALGOLIA_ADMIN_API_KEY=
