--- a/functions/package.json
+++ b/functions/package.json
@@ -15,13 +15,15 @@
   },
   "main": "lib/functions/src/index.js",
   "dependencies": {
+    "algoliasearch": "^4.14.2",
     "express": "^4.17.2",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.21.2",
     "i18next": "^21.6.16",
     "ical-generator": "^3.1.1",
     "module-alias": "^2.2.2",
-    "node-mailjet": "^3.3.4"
+    "node-mailjet": "^3.3.4",
+    "typesense": "^1.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
