--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fullcalendar/timegrid": "^5.10.1",
     "@hookform/resolvers": "^2.8.8",
     "@rolebase/editor": "^11.21.14",
+    "algoliasearch": "^4.14.2",
     "crypto-hash": "^2.0.1",
     "d3": "^7.3.0",
     "d3-hierarchy": "^3.1.1",
