--- a/functions/.env.template
+++ b/functions/.env.template
@@ -4,3 +4,5 @@ SECURITY_INVITATION_TOKEN=
 ALGOLIA_APP_ID=
 ALGOLIA_SEARCH_API_KEY=
 ALGOLIA_ADMIN_API_KEY=
+MAGICBELL_API_KEY=
+MAGICBELL_API_SECRET=
