--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/functions/src/index.js",
   "dependencies": {
+    "@magicbell/core": "^5.0.3",
     "algoliasearch": "^4.14.2",
     "express": "^4.17.2",
     "firebase-admin": "^10.0.2",
