--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fullcalendar/react": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
     "@hookform/resolvers": "^2.8.8",
+    "@magicbell/magicbell-react": "^10.3.0",
     "@rolebase/editor": "^11.21.14",
     "algoliasearch": "^4.14.2",
     "crypto-hash": "^2.0.1",
