--- a/nhost/metadata/databases/default/tables/public_role.yaml
+++ b/nhost/metadata/databases/default/tables/public_role.yaml
@@ -109,3 +109,24 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+event_triggers:
+  - name: index-role
+    definition:
+      enable_manual: false
+      update:
+        columns: '*'
+    retry_conf:
+      interval_sec: 10
+      num_retries: 0
+      timeout_sec: 60
+    webhook: '{{NHOST_BACKEND_URL}}/v1/functions/routes/indexEntity'
+    headers:
+      - name: x-nhost-webhook-secret
+        value_from_env: NHOST_WEBHOOK_SECRET
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
