--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/montserrat": "^4.5.10",
     "@fontsource/nunito": "^4.5.8",
-    "@fullcalendar/core": "^5.10.1",
-    "@fullcalendar/daygrid": "^5.10.1",
-    "@fullcalendar/interaction": "^5.10.1",
-    "@fullcalendar/list": "^5.10.1",
-    "@fullcalendar/react": "^5.10.1",
-    "@fullcalendar/timegrid": "^5.10.1",
+    "@fullcalendar/core": "^5.11.3",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/interaction": "^5.11.3",
+    "@fullcalendar/list": "^5.11.3",
+    "@fullcalendar/react": "^5.11.3",
+    "@fullcalendar/rrule": "^5.11.3",
+    "@fullcalendar/timegrid": "^5.11.3",
     "@hookform/resolvers": "^2.8.8",
     "@magicbell/magicbell-react": "^10.3.0",
     "@nhost/react": "^0.14.2",
@@ -55,7 +56,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^4.1.3",
-    "react-hook-form": "^7.28.0",
+    "react-hook-form": "^7.39.6",
     "react-i18next": "^11.16.7",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
@@ -93,7 +94,7 @@
     "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
-    "@vitejs/plugin-react": "^2.0.1",
+    "@vitejs/plugin-react": "^2.2.0",
     "babel-loader": "^8.3.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
@@ -103,8 +104,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.8.0",
     "typescript": "^4.6.2",
-    "vite": "^3.0.9",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.22.1"
+    "vite": "^3.2.4",
+    "vite-tsconfig-paths": "^3.6.0",
+    "vitest": "^0.25.3"
   }
 }
