--- a/functions/package.json
+++ b/functions/package.json
@@ -7,12 +7,14 @@
     "@magicbell/core": "^5.0.3",
     "@nhost/nhost-js": "^1.6.0",
     "algoliasearch": "^4.14.2",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
     "i18next": "^21.6.16",
     "ical-generator": "^3.1.1",
     "node-mailjet": "^5.1.1",
+    "rrule": "^2.7.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
