--- a/nhost/metadata/databases/default/tables/public_meeting_step.yaml
+++ b/nhost/metadata/databases/default/tables/public_meeting_step.yaml
@@ -103,9 +103,16 @@ event_triggers:
         columns: '*'
     retry_conf:
       interval_sec: 10
-      num_retries: 0
+      num_retries: 3
       timeout_sec: 60
     webhook: '{{NHOST_BACKEND_URL}}/v1/functions/routes/indexEntity'
     headers:
       - name: x-nhost-webhook-secret
         value_from_env: NHOST_WEBHOOK_SECRET
+    cleanup_config:
+      batch_size: 10000
+      clean_invocation_logs: false
+      clear_older_than: 168
+      paused: true
+      schedule: 0 0 * * *
+      timeout: 60
