--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@typescript-eslint/parser": "^5.15.0",
     "@vitejs/plugin-react": "^2.2.0",
     "babel-loader": "^8.3.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
