--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite & npm run codegen & (cd functions && npm run codegen)",
-    "collab": "cross-env HOST=localhost PORT=1234 npx y-websocket-server",
+    "collab": "cross-env HOST=localhost PORT=1234 npx y-websocket",
     "build": "vite build",
     "serve": "vite preview",
     "tsc": "tsc",
@@ -31,7 +31,7 @@
     "@fullcalendar/rrule": "^5.11.3",
     "@fullcalendar/timegrid": "^5.11.3",
     "@hookform/resolvers": "^2.8.8",
-    "@lexical/react": "^0.7.1",
+    "@lexical/react": "^0.7.4",
     "@magicbell/magicbell-react": "^10.3.0",
     "@nhost/react": "^0.14.2",
     "@nhost/react-apollo": "^4.8.2",
@@ -49,7 +49,7 @@
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "katex": "^0.16.4",
-    "lexical": "^0.7.1",
+    "lexical": "^0.7.4",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.throttle": "^4.1.1",
