--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rolebase",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite & npm run codegen & (cd functions && npm run codegen)",
+    "dev": "vite --force & npm run codegen & (cd functions && npm run codegen)",
     "collab": "cross-env HOST=localhost PORT=1234 npx y-websocket",
     "build": "vite build",
     "serve": "vite preview",
@@ -13,7 +13,8 @@
     "test": "vitest",
     "codegen": "graphql-codegen --config codegen.yml --errors-only",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -31,7 +32,8 @@
     "@fullcalendar/rrule": "^5.11.3",
     "@fullcalendar/timegrid": "^5.11.3",
     "@hookform/resolvers": "^2.8.8",
-    "@lexical/react": "^0.7.4",
+    "@lexical/markdown": "^0.7.5",
+    "@lexical/react": "^0.7.5",
     "@magicbell/magicbell-react": "^10.3.0",
     "@nhost/react": "^0.14.2",
     "@nhost/react-apollo": "^4.8.2",
@@ -49,7 +51,7 @@
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "katex": "^0.16.4",
-    "lexical": "^0.7.4",
+    "lexical": "^0.7.5",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.throttle": "^4.1.1",
@@ -107,6 +109,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
+    "patch-package": "^6.5.0",
     "prettier": "^2.6.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.8.0",
