--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 node_modules
 .DS_Store
-dist
 *.local
 *.cache
 *.log
 .env
 .env.default
 .nhost
+
+# Builds
+dist
+storybook-static
 
 # Rollup visualizer
 stats.html
