--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "rollup-plugin-visualizer": "^5.8.0",
     "typescript": "^4.6.2",
     "vite": "^3.2.4",
+    "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^3.6.0",
     "vitest": "^0.25.3"
   }
