--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.3",
-    "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "^1.8.6",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
+    "@chakra-ui/icons": "^2.0.15",
+    "@chakra-ui/react": "^2.4.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fontsource/montserrat": "^4.5.10",
     "@fontsource/nunito": "^4.5.8",
     "@fullcalendar/core": "^5.11.3",
@@ -31,6 +31,7 @@
     "@fullcalendar/react": "^5.11.3",
     "@fullcalendar/rrule": "^5.11.3",
     "@fullcalendar/timegrid": "^5.11.3",
+    "@hello-pangea/dnd": "^16.2.0",
     "@hookform/resolvers": "^2.8.8",
     "@lexical/markdown": "^0.7.5",
     "@lexical/react": "^0.7.5",
@@ -44,9 +45,9 @@
     "date-fns": "^2.28.0",
     "diff": "^5.0.0",
     "downshift": "^6.1.7",
-    "easy-peasy": "^5.0.4",
+    "easy-peasy": "^5.2.0",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^6",
+    "framer-motion": "^8.1.7",
     "graphql": "^16.6.0",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -57,18 +58,16 @@
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
     "nanoid": "^3.3.1",
-    "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-easy-crop": "^4.1.3",
     "react-hook-form": "^7.39.6",
     "react-i18next": "^11.16.7",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.6.1",
     "react-transition-group": "^4.4.5",
     "rrule": "^2.7.1",
     "slugify": "^1.6.5",
-    "styled-components": "^5.3.5",
     "y-websocket": "^1.4.5",
     "yjs": "^13.5.43",
     "yup": "^0.32.11"
@@ -80,12 +79,12 @@
     "@graphql-codegen/typescript": "^2.7.3",
     "@graphql-codegen/typescript-operations": "^2.5.3",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
-    "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-essentials": "^6.5.13",
-    "@storybook/addon-interactions": "^6.5.13",
-    "@storybook/addon-links": "^6.5.13",
-    "@storybook/builder-vite": "^0.2.5",
-    "@storybook/react": "^6.5.13",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-vite": "^0.2.6",
+    "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "0.0.13",
     "@types/d3": "^7.1.0",
     "@types/d3-hierarchy": "^3.0.2",
@@ -95,28 +94,27 @@
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.throttle": "^4.1.6",
     "@types/lodash.uniqby": "^4.7.6",
-    "@types/react": "^17.0.40",
-    "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-dom": "^17.0.13",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react": "^3.0.0",
     "babel-loader": "^8.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.31.11",
     "patch-package": "^6.5.0",
     "prettier": "^2.6.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.8.0",
     "typescript": "^4.6.2",
-    "vite": "^3.2.4",
+    "vite": "^4.0.4",
     "vite-plugin-svgr": "^2.4.0",
-    "vite-tsconfig-paths": "^3.6.0",
-    "vitest": "^0.25.3"
+    "vite-tsconfig-paths": "^4.0.3",
+    "vitest": "^0.26.3"
   }
 }
