--- a/nhost/metadata/databases/default/tables/tables.yaml
+++ b/nhost/metadata/databases/default/tables/tables.yaml
@@ -15,6 +15,7 @@
 - "!include public_meeting_step.yaml"
 - "!include public_meeting_template.yaml"
 - "!include public_member.yaml"
+- "!include public_member_scope.yaml"
 - "!include public_old_id.yaml"
 - "!include public_org.yaml"
 - "!include public_org_file.yaml"
