--- a/nhost/metadata/databases/default/tables/public_circle_member.yaml
+++ b/nhost/metadata/databases/default/tables/public_circle_member.yaml
@@ -23,6 +23,8 @@ insert_permissions:
                         _eq: Member
                     - role:
                         _eq: Admin
+                    - role:
+                        _eq: Owner
       columns:
         - avgMinPerWeek
         - circleId
@@ -41,8 +43,16 @@ select_permissions:
         circle:
           org:
             members:
-              userId:
-                _eq: X-Hasura-User-Id
+              _and:
+                - userId:
+                    _eq: X-Hasura-User-Id
+                - _or:
+                    - role:
+                        _eq: Member
+                    - role:
+                        _eq: Admin
+                    - role:
+                        _eq: Owner
       allow_aggregations: true
 update_permissions:
   - role: user
@@ -62,6 +72,8 @@ update_permissions:
                         _eq: Member
                     - role:
                         _eq: Admin
+                    - role:
+                        _eq: Owner
       check:
         circle:
           org:
@@ -74,3 +86,5 @@ update_permissions:
                         _eq: Member
                     - role:
                         _eq: Admin
+                    - role:
+                        _eq: Owner
