--- a/nhost/metadata/databases/default/tables/public_decision.yaml
+++ b/nhost/metadata/databases/default/tables/public_decision.yaml
@@ -25,6 +25,8 @@ insert_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       columns:
         - archived
         - circleId
@@ -48,8 +50,16 @@ select_permissions:
       filter:
         org:
           members:
-            userId:
-              _eq: X-Hasura-User-Id
+            _and:
+              - userId:
+                  _eq: X-Hasura-User-Id
+              - _or:
+                  - role:
+                      _eq: Member
+                  - role:
+                      _eq: Admin
+                  - role:
+                      _eq: Owner
       allow_aggregations: true
 update_permissions:
   - role: user
@@ -71,6 +81,8 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       check:
         org:
           members:
@@ -82,6 +94,8 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
 event_triggers:
   - name: index-decision
     definition:
