--- a/nhost/metadata/databases/default/tables/public_meeting.yaml
+++ b/nhost/metadata/databases/default/tables/public_meeting.yaml
@@ -33,6 +33,8 @@ insert_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       columns:
         - attendees
         - circleId
@@ -70,8 +72,16 @@ select_permissions:
       filter:
         org:
           members:
-            userId:
-              _eq: X-Hasura-User-Id
+            _and:
+              - userId:
+                  _eq: X-Hasura-User-Id
+              - _or:
+                  - role:
+                      _eq: Member
+                  - role:
+                      _eq: Admin
+                  - role:
+                      _eq: Owner
       allow_aggregations: true
 update_permissions:
   - role: user
@@ -100,6 +110,8 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       check:
         org:
           members:
@@ -111,6 +123,8 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
 event_triggers:
   - name: index-meeting
     definition:
