--- a/nhost/metadata/databases/default/tables/public_task.yaml
+++ b/nhost/metadata/databases/default/tables/public_task.yaml
@@ -25,6 +25,8 @@ insert_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       columns:
         - archived
         - circleId
@@ -76,6 +78,8 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       check:
         org:
           members:
@@ -87,6 +91,8 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
 event_triggers:
   - name: index-task
     definition:
