--- a/nhost/metadata/databases/default/tables/public_task_view.yaml
+++ b/nhost/metadata/databases/default/tables/public_task_view.yaml
@@ -19,6 +19,8 @@ insert_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       columns:
         - key
         - orgId
@@ -52,6 +54,8 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       check:
         org:
           members:
@@ -63,3 +67,5 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
