--- a/nhost/metadata/databases/default/tables/public_meeting_recurring.yaml
+++ b/nhost/metadata/databases/default/tables/public_meeting_recurring.yaml
@@ -33,6 +33,8 @@ insert_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       columns:
         - circleId
         - duration
@@ -59,8 +61,16 @@ select_permissions:
       filter:
         org:
           members:
-            userId:
-              _eq: X-Hasura-User-Id
+            _and:
+              - userId:
+                  _eq: X-Hasura-User-Id
+              - _or:
+                  - role:
+                      _eq: Member
+                  - role:
+                      _eq: Admin
+                  - role:
+                      _eq: Owner
 update_permissions:
   - role: user
     permission:
@@ -83,6 +93,8 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       check:
         org:
           members:
@@ -94,6 +106,8 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
 delete_permissions:
   - role: user
     permission:
@@ -108,3 +122,5 @@ delete_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
