--- a/nhost/metadata/databases/default/tables/public_thread.yaml
+++ b/nhost/metadata/databases/default/tables/public_thread.yaml
@@ -33,6 +33,8 @@ insert_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       columns:
         - archived
         - circleId
@@ -84,6 +86,8 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
       check:
         org:
           members:
@@ -95,6 +99,8 @@ update_permissions:
                       _eq: Member
                   - role:
                       _eq: Admin
+                  - role:
+                      _eq: Owner
 event_triggers:
   - name: index-thread
     definition:
