--- a/nhost/metadata/databases/default/tables/public_thread_activity.yaml
+++ b/nhost/metadata/databases/default/tables/public_thread_activity.yaml
@@ -23,6 +23,8 @@ insert_permissions:
                         _eq: Member
                     - role:
                         _eq: Admin
+                    - role:
+                        _eq: Owner
       set:
         userId: x-hasura-User-Id
       columns:
@@ -70,5 +72,7 @@ delete_permissions:
                         _eq: X-Hasura-User-Id
                     - role:
                         _eq: Admin
+                    - role:
+                        _eq: Owner
           - userId:
               _eq: X-Hasura-User-Id
